<resources>
    <string name="app_name" translatable="false">WF Stats</string>
    <string name="playerStats">Player Stats</string>
    <string name="clan_stats">Clan Stats</string>
    <string name="playernickname">Nomad</string>
    <string name="clan">clan</string>
    <string name="pvp">PVP</string>
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="friendlykills">Friendly Kills</string>
    <string name="kd">KD</string>
    <string name="pvp_wins">Wins</string>
    <string name="pvp_loses">Loses</string>
    <string name="playtime">Playtime</string>
    <string name="favorite_class">Favorite Class</string>
    <string name="type_player">Type Player Name</string>
    <string name="select_server">Select Server</string>
    <string name="find_player">Find Player</string>
    <string name="find_clan">Find Clan</string>
    <string name="error_finding_player">There was an error. Check if you are connected or the player name/server entered is correct.</string>
    <string name="error_finding_clan">There was an error. Check if you are connected or the clan name/server entered is correct.</string>
    <string name="headshots">Headshots</string>
    <string name="hint_type_player">Type the player name to search</string>
    <string name="hint_type_clan">Type the clan name to search</string>
    <string name="playername">playerName</string>
    <string name="clanname">clanName</string>
    <string name="damage_dealt">Damage Dealt</string>
    <string name="member">Member</string>
    <string name="clan_points">Clan Points</string>
    <string name="description_clan_role">Image of role for clan member</string>
    <string name="type_clan_name">Type Clan Name</string>
    <string name="details">Details</string>
    <string name="coop" translatable="false">Coop</string>
    <string name="coins_used">Coins Used</string>
    <string name="session_left">Sessions Left</string>
    <string name="session_kicked">Sessions Kicked</string>
    <string name="melee_kills">Melee Kills</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="clan_leader">Clan Leader</string>
    <string name="clantop100">Top 100 Clans</string>
    <string name="error_internet">There was an error, check your internet and try again</string>
    <string name="members">Members</string>
    <string name="pvp_headshot_percentage">PVP Headshot Percentage</string>
    <string name="recon" translatable="false">Sniper</string>
    <string name="rifleman">Rifleman</string>
    <string name="medic">Medic</string>
    <string name="engineer">Engineer</string>
    <string name="heavy" translatable="false">SED</string>
    <string name="hint_graph">Click on graph for more details</string>
    <string name="general_info">General Info</string>
    <string name="ammo_restored">Ammo Restored</string>
    <string name="climb_assists">Climb Assists</string>
    <string name="coop_climbs">Coop Climbs</string>
    <string name="pvp_melee_kills">PVP Melee Kills</string>
    <string name="recon_playtime">Sniper Playtime</string>
    <string name="medic_playtime">Medic Playtime</string>
    <string name="rifleman_playtime">Rifleman Playtime</string>
    <string name="engineer_playtime">Engineer Playtime</string>
    <string name="heavy_playtime">SED Playtime</string>
    <string name="repair_made">Repair Made</string>
    <string name="revive_made">Revive Made</string>
    <string name="pvp_kicked">PVP Kicked</string>
    <string name="pvp_left">PVP Left</string>
    <string name="claymore_kills">Claymore Kills</string>
    <string name="hp_healed">HP Healed</string>
    <string name="rifleman_image_description">The rifleman class image</string>
    <string name="medic_image_description">The medic class image</string>
    <string name="engineer_image_description">The engineer class image</string>
    <string name="sniper_image_description">The sniper class image</string>
    <string name="sed_image_description">The SED class image</string>
    <string name="hint_clan_player">Click on clan name to check clan stats</string>
    <string name="ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-3660065570474827~7325057103</string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_player_details" translatable="false">ca-app-pub-3660065570474827/7871852014</string>
    <string name="ad_player_stats" translatable="false">ca-app-pub-3660065570474827/9626403923</string>
    <string name="warface_dollars">Warface Dollars</string>
    <string name="warface_kredits">Warface Kredits</string>
    <string name="warface_crown">Warface Crown</string>
    <string name="open_warbox">Open Warbox</string>
    <string name="my_warbox">My Warboxes</string>
    <string name="warbox" translatable="false">Warbox</string>
    <string name="warbox_image">"Warbox's Image "</string>
    <string name="buy_box">Buy Box</string>
    <string name="open_all">Open All</string>
    <string name="get_prizes">Get Prizes</string>
    <string name="warbox_prize" >prize </string>

</resources>

















