<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.warbox.OpenWarbox">

    <ImageView
        android:id="@+id/imgWB5"
        android:layout_width="0dp"
        android:layout_height="@dimen/warbox_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/warbox_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWB4"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/imgWB4"
        android:layout_width="0dp"
        android:layout_height="@dimen/warbox_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/warbox_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWB3"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/imgWB3"
        android:layout_width="0dp"
        android:layout_height="@dimen/warbox_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/warbox_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWB2"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/imgWB2"
        android:layout_width="0dp"
        android:layout_height="@dimen/warbox_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/warbox_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWB1"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/lblMoneyLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/warface_dollars"
        app:drawableStartCompat="@drawable/dollars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gulWarbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="67dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgWB1"
        android:layout_width="0dp"
        android:layout_height="@dimen/warbox_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/warbox_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gulWarbox"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnBuyBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/rounded_button"
        android:text="@string/buy_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOpenBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/rounded_button"
        android:text="@string/open_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGetPrizes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_transparent_button"
        android:text="@string/get_prizes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuyBox" />

    <TextView
        android:id="@+id/lblWb5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warbox_prize"
        app:layout_constraintBottom_toBottomOf="@+id/imgWB5"
        app:layout_constraintEnd_toEndOf="@+id/imgWB5"
        app:layout_constraintStart_toStartOf="@+id/imgWB5" />

    <TextView
        android:id="@+id/lblWb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warbox_prize"
        app:layout_constraintBottom_toBottomOf="@+id/imgWB4"
        app:layout_constraintEnd_toEndOf="@+id/imgWB4"
        app:layout_constraintStart_toStartOf="@+id/imgWB4" />

    <TextView
        android:id="@+id/lblWb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warbox_prize"
        app:layout_constraintBottom_toBottomOf="@+id/imgWB3"
        app:layout_constraintEnd_toEndOf="@+id/imgWB3"
        app:layout_constraintStart_toStartOf="@+id/imgWB3" />

    <TextView
        android:id="@+id/lblWb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warbox_prize"
        app:layout_constraintBottom_toBottomOf="@+id/imgWB2"
        app:layout_constraintEnd_toEndOf="@+id/imgWB2"
        app:layout_constraintStart_toStartOf="@+id/imgWB2" />

    <TextView
        android:id="@+id/lblWb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imgWB1"
        app:layout_constraintEnd_toEndOf="@+id/imgWB1"
        app:layout_constraintStart_toStartOf="@+id/imgWB1" />
</androidx.constraintlayout.widget.ConstraintLayout>